--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import "styles/media";
 @import "styles/intro";
 @import "styles/store";
+@import "styles/cart";
 @import "styles/scrap";
 @import "styles/footer";
 @import "styles/response";
