--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -115,7 +115,7 @@
                     & .image {
                         width: 100%;
                         height: 100%;
-                        background: transparent no-repeat center bottom/cover;
+                        background: transparent no-repeat center center/cover;
                     }
                     & .typo {
                         position: absolute;
