--- a/src/styles/_scrap.scss
+++ b/src/styles/_scrap.scss
@@ -32,7 +32,7 @@
                     position: relative;
                     width: 100%;
                     height: 150px;
-                    background: transparent no-repeat center bottom/cover;
+                    background: transparent no-repeat center center/cover;
                     @media screen and (max-width: 500px) {
                         float: right;
                         width: 80px;
