--- a/src/styles/_store.scss
+++ b/src/styles/_store.scss
@@ -1,5 +1,10 @@
 .store {
     background: #f6f6f6;
+    background-image: -ms-linear-gradient(top, #F6F6F6 90%, #EEEEEE 100%);
+    background-image: -moz-linear-gradient(top, #F6F6F6 90%, #EEEEEE 100%);
+    background-image: -o-linear-gradient(top, #F6F6F6 90%, #EEEEEE 100%);
+    background-image: -webkit-linear-gradient(top, #F6F6F6 90%, #EEEEEE 100%);
+    background-image: linear-gradient(to bottom, #F6F6F6 90%, #EEEEEE 100%);
     & .product-box {
         width: 100%;
         margin-bottom: 25px;
@@ -9,14 +14,49 @@
             width: 320px;
             margin: 0 8px;
             background: #fff;
+            @include box-shadow(1px 1px 3px #eeeeee);
             & .top {
                 border: 1px solid #e1e1e1;
                 border-bottom: none;
+                cursor: pointer;
+                @include user-select(none);
+                &:hover {
+                    & .cover {
+                        opacity: 1 !important;
+                    }
+                }
                 & .thumb {
                     position: relative;
                     width: 100%;
                     height: 220px;
-                    background: transparent no-repeat center bottom/cover;
+                    background: transparent no-repeat center center/cover;
+                    & .cover {
+                        position: relative;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        opacity: 0;
+                        @include transition(opacity .35s);
+                        & .bg {
+                            position: absolute;
+                            width: 100%;
+                            height: 100%;
+                            background-color: #000000;
+                            opacity: .5;
+                        }
+                        & .text {
+                            position: relative;
+                            display: block;
+                            width: 100%;
+                            height: 100%;
+                            font-size: 17px;
+                            color: #ffffff;
+                            text-align: center;
+                            padding-top: 90px;
+                            z-index: 1;
+                        }
+                    }
                 }
                 & .title {
                     padding: 30px 20px;
@@ -60,7 +100,7 @@
                     border-right: 1px solid #e1e1e1;
                     & .price {
                         display: block;
-                        margin-top: -3px;
+                        // margin-top: -3px;
                         line-height: 35px;
                         & strong {
                             font-size: 29px;
@@ -82,17 +122,39 @@
                     width: 40%;
                     margin: 15px 0 20px -4px;
                     padding: 5px 15px 5px 0;
-                    & i.minus {
-
+                    @include user-select(none);
+                    & a.pm-buttons {
+                        display: inline-block;
+                        width: 35px;
+                        height: 35px;
+                        & i {
+                            display: block;
+                            width: 20px;
+                            height: 20px;
+                            background: url("/assets/images/store.png") no-repeat;
+                        }
+                        &.plus i {
+                            margin-top: 7px;
+                            margin-left: 10px;
+                            background-position: 0 0;
+                        }
+                        &.plus:hover i {
+                            background-position: -30px 0;
+                        }
+                        &.minus i {
+                            margin-top: 7px;
+                            margin-left: 5px;
+                            background-position: 0 -30px;
+                        }
+                        &.minus:hover i {
+                            background-position: -30px -30px;
+                        }
                     }
                     & .quantity {
                         display: inline-block;
-                        margin-top: -3px;
+                        // margin-top: -3px;
                         font-size: 29px;
                         line-height: 35px;
-                    }
-                    & .plus {
-
                     }
                 }
             }
