--- a/src/app/store/cart.component.html
+++ b/src/app/store/cart.component.html
@@ -1,6 +1,24 @@
 <div class="cart-box">
     <div class="bill">
-        <span>3000</span>+<span>5000</span>=<span>8000</span>
+        <dl>
+            <dt>상품가격</dt>
+            <dd><strong>300,000</strong>&nbsp;원</dd>
+        </dl>
+        <dl>
+            <dt>할인금액</dt>
+            <dd><strong>15,000</strong>&nbsp;원</dd>
+        </dl>
+        <dl>
+            <dt>배송비</dt>
+            <dd><strong>4,000</strong>&nbsp;원</dd>
+        </dl>
+        <dl class="total">
+            <dt>결제예정금액</dt>
+            <dd><strong>{{discount}}</strong>&nbsp;원</dd>
+        </dl>
     </div>
-    <a class="order" href="#">Continue</a>
+    <div class="separator"></div>
+    <div class="funcs">
+        <a class="order" href="#">CONTINUE</a>
+    </div>
 </div>
