--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,12 +1,12 @@
 <div class="boundary">
     <h2 class="title">Store</h2>
     <div class="product-box">
-        <div *ngFor="let product of products" class="product">
+        <div *ngFor="let product of products; let i = index" class="product">
             <div class="top" (click)="add($event, product.id)">
                 <div class="thumb" [style.background-image]="'url('+product.image+')'">
-                    <div class="cover">
+                    <div class="cover" [class.visible]="coverVisible[i]" (mouseover)="activeCover(i, 'ADD TO CART')" (mouseout)="inactiveCover(i)">
                         <div class="bg"></div>
-                        <span class="text">ADD CART</span>
+                        <span class="text">{{coverText}}</span>
                     </div>
                 </div>
                 <h3 class="title">{{product.title}}</h3>
@@ -18,12 +18,12 @@
             <div class="bottom">
                 <div class="left">
                     <h4>가격</h4>
-                    <span class="price"><strong>{{product.price}}</strong> 원</span>
-                    <span *ngIf="product.oprice != 0" class="o-price">{{product.oprice}} 원</span>
+                    <span class="price"><strong>{{withComma(product.price)}}</strong> 원</span>
+                    <span *ngIf="product.oprice != 0" class="o-price">{{withComma(product.oprice)}} 원</span>
                 </div>
                 <div class="right">
                     <h4>수량</h4>
-                    <a class="pm-buttons minus" href="#" (click)="remove($event, product.id)"><i></i></a><span class="quantity">{{product.quantity}}</span><a class="pm-buttons plus" href="#"  (click)="add($event, product.id)"><i></i></a>
+                    <a class="pm-buttons minus" (mouseover)="activeCover(i, 'REMOVE TO CART')" (mouseout)="inactiveCover(i)" href="#" (click)="remove($event, product.id)"><i></i></a><span class="quantity" [attr.data-quantity]="product.quantity">{{withComma(product.quantity)}}</span><a class="pm-buttons plus" (mouseover)="activeCover(i, 'ADD TO CART')" (mouseout)="inactiveCover(i)" href="#"  (click)="add($event, product.id)"><i></i></a>
                 </div>
             </div>
         </div>
