--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -14,6 +14,11 @@ header {
         margin-top: -20px;
         background: #fff;
         opacity: 1 !important;
+        @media screen and (max-width: 980px) {
+            & .logo {
+                display: none;
+            }
+        }
         & .menu {
             color: $titleColor !important;
         }
@@ -24,6 +29,12 @@ header {
         top: 50%;
         margin-top: -15px;
         margin-left: 25px;
+        @media screen and (max-width: 980px) {
+            width: 100%;
+            text-align: center;
+            color: #fff;
+            margin-left: 0;
+        }
         & h2 {
             margin: 10px 35px;
             font-size: 19px;
@@ -36,6 +47,19 @@ header {
         margin-top: -15px;
         margin-right: 20px;
         float: right;
+        @media screen and (max-width: 980px) {
+            width: 285px;
+            color: #fff;
+            float: inherit;
+            margin: 0 auto;
+            margin-top: -10px;
+            & ul {
+                & li {
+                    margin: 10px 10px;
+                    font-size: 15px;
+                }
+            }
+        }
         & ul {
             margin: 0;
             padding: 0;
