--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -3,6 +3,10 @@
     display: block;
     padding: 0 !important;
     margin: 0 0 45px 0;
+    @media screen and (max-width: 980px) {
+        margin-top: 0;
+        margin-bottom: 20px;
+    }
     & .picinfo.top {
         text-align: center;
         & h2 {
@@ -29,6 +33,12 @@
             width: 100%;
             height: 100%;
             background: #eee;
+            @media screen and (max-width: 1650px) {
+                background: transparent !important;
+                & .left-side .picinfo, & .right-side .picinfo {
+                    display: none;
+                }
+            }
             & .left-side {
                 display: flex;
                 align-items: center;
@@ -160,6 +170,9 @@
                 &:first-child {
                     & .typo {
                         display: none;
+                        @media screen and (max-width: 1650px) {
+                            display: block;
+                        }
                     }
                 }
             }
