--- a/src/styles/_cart.scss
+++ b/src/styles/_cart.scss
@@ -1,12 +1,18 @@
 .cart {
     position: fixed;
+    z-index: 10;
     bottom: -115px;
     width: 100%;
     height: 115px;
     background: #fff;
     border-top: 1px solid #e1e1e1;
     @include transition(all 0.25s ease);
-    @include box-shadow(0 0px 5px #e1e1e1);
+    // @include box-shadow(0 0px 5px #e1e1e1);
+    @media screen and (max-width: 700px) {
+        height: 155px;
+        bottom: -155px;
+        // @include box-shadow(none);
+    }
     & .cart-box {
         position: relative;
         margin: 0 auto;
@@ -15,14 +21,33 @@
         max-width: $pageWidth;
         & .bill {
             display: inline-block;
-            width: 70%;
+            width: 65%;
             margin-top: 25px;
             padding-left: 80px;
             padding-right: 20px;
+            @media screen and (max-width: 700px) {
+                width: 100%;
+                margin-top: 15px;
+                padding-left: 30px;
+            }
+            @media screen and (min-width: 701px) and (max-width: 980px) {
+                width: 50%;
+                padding-left: 30px;
+            }
             & dl {
                 display: inline-block;
                 width: 25%;
                 margin-left: -4px;
+                @media screen and (max-width: 980px) {
+                    width: 50%;
+                    text-align: center;
+                    &:nth-child(1), &:nth-child(2) {
+                        display: none;
+                    }
+                    &.total strong {
+                        font-size: 24px !important;
+                    }
+                }
                 &.total strong {
                     color: $titleColor;
                     font-size: 29px;
@@ -50,21 +75,52 @@
             height: 100%;
             margin-left: -5px;
             border-right: 1px dashed #e1e1e1;
+            @media screen and (max-width: 700px) {
+                display: none;
+            }
         }
         & .funcs {
             display: inline-block;
-            width: 30%;
+            width: 35%;
             height: 100%;
             margin-top: 25px;
             margin-left: -4px;
             padding-top: 5px;
             padding-left: 35px;
+            @media screen and (max-width: 700px) {
+                display: block;
+                width: 100%;
+                margin-top: 10px;
+                margin-left: 0;
+                padding-top: 13px;
+                padding-left: 0;
+                text-align: center;
+                border-top: 1px dashed #eee;
+            }
+            @media screen and (min-width: 701px) and (max-width: 980px) {
+                width: 50%;
+            }
             & .order {
                 display: inline-block;
-                padding: 13px 40px;
-                background: #ea002c;
+                padding: 14px 30px 15px 30px;
                 color : #fff;
                 font-weight: bold;
+                margin-right: 5px;
+                margin-bottom: 5px;
+                border-radius: 2px;
+                @media screen and (max-width: 700px) {
+                    padding: 9px 30px 10px 30px;
+                }
+                &.account {
+                    background: #ea002c;
+                }
+                &.npay {
+                    background: #2cc911;
+                }
+                &:last-child {
+                    margin-right: 0;
+                    margin-bottom: 0;
+                }
             }
         }
     }
