--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -3,20 +3,25 @@ header {
     z-index: 10;
     top: 0;
     width: 100%;
-    height: 75px;
+    height: 85px;
     background: transparent;
+    padding: 35px 25px 0 25px;
     @include transition(opacity .6s ease);
+    @media screen and (max-width: 980px) {
+        padding: 20px 5px 0 5px;
+    }
     &.hidden {
         opacity: 0;
     }
     &.floating {
-        border-bottom: 1px solid #c1c1c1 !important;
-        margin-top: -20px;
-        background: #fff;
+        top: -28px;
+        background: rgba(255, 255, 255, 0.8);
         opacity: 1 !important;
         @media screen and (max-width: 980px) {
+            top: -20px;
+            height: 65px;
             & .logo {
-                display: none;
+                color: $titleColor;
             }
         }
         & .menu {
@@ -26,14 +31,8 @@ header {
     & .logo {
         position: relative;
         float: left;
-        top: 50%;
-        margin-top: -15px;
-        margin-left: 25px;
         @media screen and (max-width: 980px) {
-            width: 100%;
-            text-align: center;
             color: #fff;
-            margin-left: 0;
         }
         & h2 {
             margin: 10px 35px;
@@ -42,36 +41,36 @@ header {
     }
     & .menu {
         position: relative;
-        top: 50%;
-        width: 430px;
-        margin-top: -15px;
+        // width: 430px;
         margin-right: 20px;
         float: right;
         @media screen and (max-width: 980px) {
-            width: 285px;
             color: #fff;
-            float: inherit;
-            margin: 0 auto;
-            margin-top: -10px;
-            & ul {
-                & li {
-                    margin: 10px 10px;
-                    font-size: 15px;
-                }
-            }
         }
         & ul {
             margin: 0;
             padding: 0;
             list-style: none;
+            text-align: right;
             & li {
+                display: inline-block;
+                text-align: center;
+                margin-right: 50px;
+                font-size: 16px;
+                line-height: 50px;
+                @media screen and (max-width: 980px) {
+                    font-size: 15px;
+                    margin-right: 30px;
+                    &:nth-child(1), &:nth-child(2) {
+                        display: none;
+                    }
+                }
                 &.selected {
                     text-decoration: underline;
                 }
-                float:left;
-                text-align: center;
-                margin: 10px 25px;
-                font-size: 16px;
+                &:last-child {
+                    margin-right: 0;
+                }
                 & a {
                     text-decoration: none;
                     &:hover {
