--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -58,7 +58,7 @@ a {
     @media screen and (max-width: 980px) {
         margin-top: 0;
         & section {
-            padding: 15px 0 55px 0;
+            padding: 0 0 55px 0 !important;
         }
     }
     & .title {
