--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,4 +1,15 @@
-<div class="boundary">
-    <h2 class="title">Welcome to my application</h2>
-    <p>Build features quickly with simple, declarative templates. Extend the template language with your own components and use a wide array of existing components. Get immediate Angular-specific help and feedback with nearly every IDE and editor. All this comes together so you can focus on building amazing apps rather than trying to make the code work.</p>
+<div class="boundary sparassis-crispa">
+    <div class="bg"></div>
+    <div class="typo">
+        <h2 class="title">Welcome to my application</h2>
+        <p>Build features quickly with simple, declarative templates. Extend the template language with your own components and use a wide array of existing components. Get immediate Angular-specific help and feedback with nearly every IDE and editor. All this comes together so you can focus on building amazing apps rather than trying to make the code work.</p>
+        <a class="source-link" href="http://book.naver.com/bookdb/book_detail.nhn?bid=7443914" target="_blank">
+            <span class="thumb"></span>
+            <dl>
+                <dt>꽃송이버섯 베타글루칸 1.3</dt>
+                <dd>나카지마 미쯔오</dd>
+                <dd class="link-btn">자세히 보기</dd>
+            </dl>
+        </a>
+    </div>
 </div>
