--- a/src/app/scrap/scrap.component.html
+++ b/src/app/scrap/scrap.component.html
@@ -10,5 +10,5 @@
             </a>
         </div>
     </div>
-    <div class="more" *ngIf="moreButtonVisible"><a href="#" (click)="loadMore($event)">4개 더보기</a></div>
+    <div class="more" *ngIf="moreButtonVisible"><a href="#" (click)="loadMore($event)">더보기</a></div>
 </div>
