--- a/src/styles/_intro.scss
+++ b/src/styles/_intro.scss
@@ -1,12 +1,90 @@
 .intro {
-    @media screen and (max-width: 980px) {
-        & p {
-            width: 85%;
+    padding: 0 !important;
+    & .boundary {
+        max-width: 100% !important;
+        margin: 0 !important;
+    }
+    & .bg {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-image: url("https://www.google.com/chromecast/static/images/speakers/audio-what-is-chromecast.jpg");
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        top: 0;
+        left: 0;
+    }
+    & .typo {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+    }
+    & .sparassis-crispa {
+        height: 700px;
+        & .typo {
+            padding: 140px 50px 0 350px;
+            @media screen and (max-width: 980px) {
+                padding-left: 50px;
+            }
+            @media screen and (min-width: 981px) and (max-width: 1280px) {
+                padding-left: 90px;
+            }
+
+            @media screen and (min-width: 1281px) and (max-width: 1440px) {
+                padding-left: 140px;
+            }
+
+            @media screen and (min-width: 1441px) and (max-width: 1920px) {
+                padding-left: 280px;
+            }
+
+            @media screen and (min-width: 1921px) {
+                padding-left: 360px;
+            }
+            & h2 {
+                text-align: left;
+            }
+            & p {
+                max-width: 650px;
+                text-align: justify;
+            }
+            & .source-link {
+                display: block;
+                margin-top: 40px;
+                & .thumb {
+                    display: inline-block;
+                    float: left;
+                    width: 120px;
+                    height: 155px;
+                    background: url("/assets/images/thumb_book_beta13.jpg") no-repeat center center/cover;
+                    // background: #999;
+                }
+                & dl {
+                    display: inline-block;
+                    float: left;
+                    margin: 5px 0 0 18px;
+                    & dt {
+                        color: #000;
+                    }
+                    & dd {
+                        margin-top: 8px;
+                        font-size: 14px;
+                        &.link-btn {
+                            margin-top: 23px;
+                            border: 1px solid #00afff;
+                            padding: 8px 16px 9px 16px;
+                            width: 105px;
+                            border-radius: 2px;
+                            color: #00afff;
+                        }
+                    }
+
+                }
+            }
         }
     }
-    & p {
-        margin: 0 auto;
-        max-width: 650px;
-        text-align: justify;
-    }
+    
 }
