--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -2,7 +2,7 @@
     position: relative;
     display: block;
     padding: 0 !important;
-    margin: 0 0 45px 0;
+    margin: 0;
     @media screen and (max-width: 980px) {
         margin-top: 0;
         margin-bottom: 20px;
