--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <header [class.floating]="topNavfloating"></header>
 <div class="content">
-    <section class="media"></section>
-    <section class="intro"></section>
-    <section class="store"></section>
-    <section class="scrap"></section>
+    <section id="media" class="media"></section>
+    <section id="intro" class="intro"></section>
+    <section id="store" class="store"></section>
+    <section id="scrap" class="scrap"></section>
     <!-- <section class="how-to-eat"></section> -->
 </div>
 <div class="cart"></div>
