--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,4 +1,4 @@
-<div class="boundary sparassis-crispa">
+<div id="sparassis-crispa" class="boundary sparassis-crispa">
     <div class="bg"></div>
     <div class="typo">
         <h2 class="title">Welcome to my application</h2>
