--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -3,10 +3,6 @@
     display: block;
     padding: 0 !important;
     margin: 0;
-    @media screen and (max-width: 980px) {
-        margin-top: 0;
-        margin-bottom: 20px;
-    }
     & .picinfo.top {
         text-align: center;
         & h2 {
@@ -24,7 +20,7 @@
     & .picstream {
         position: relative;
         width: 100%;
-        height: 550px;
+        // height: 550px;
         overflow: hidden;
         & .carousel-bg {
             position: absolute;
