--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -7,7 +7,7 @@
             <span class="thumb"></span>
             <dl>
                 <dt>꽃송이버섯 베타글루칸 1.3</dt>
-                <dd>나카지마 미쯔오</dd>
+                <dd>나카지마 미쯔오 도쿄의대 교수</dd>
                 <dd class="link-btn">자세히 보기</dd>
             </dl>
         </a>
