--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -131,12 +131,12 @@
                         width: 80%;
                         & h2 {
                             margin: 0 0 7px 0;
-                            font-weight: normal;
-                            font-size: 28px;
+                            font-weight: 300;
+                            font-size: 27px;
                         }
                         & p {
                             margin: 7px 0 0 0;
-                            font-size: 15px;
+                            font-size: 17px;
                             opacity: .7;
                         }
                     }
