--- a/src/app/store/cart.component.html
+++ b/src/app/store/cart.component.html
@@ -20,6 +20,6 @@
     <div class="separator"></div>
     <div class="funcs">
         <!-- <a class="order account" href="#" title="계좌이체로 주문하기">계좌이체</a> -->
-        <a class="order npay" href="#" (click)="order($event, 'npay')"title="네이버페이로 주문하기">NPay 주문하기</a>
+        <a class="order npay" href="#" (click)="order($event, 'npay')"title="주문하기">주문하기</a>
     </div>
 </div>
