--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,13 +2,12 @@
     <div class="left"><span class="logo">HERELOGO</span></div>
     <div class="right">
         <dl class="info">
-            <dt>상호</dt><dd>플레로게임즈</dd><br>
-            <dt>대표자</dt><dd>홍길동</dd><span class="bar"></span>
-            <dt>주소</dt><dd>전라도 장성현 아곡리 아치실 마을</dd><br>
-            <dt>사업자등록번호</dt><dd>000-00-00000</dd><span class="bar"></span>
+            <dt>두리산버섯농장</dt><dd>경상북도 상주시 모동면 이동6길 117</dd><br>
+            <dt>사업자등록번호</dt><dd>605-94-91120</dd><span class="bar"></span>
             <dt>통신판매업번호</dt><dd>제2017-전라도-000호</dd><br>
             <dt>전화</dt><dd>010-1234-5678</dd><span class="bar"></span>
-            <dt>이메일</dt><dd>admin@naver.com</dd>
+            <dt>이메일</dt><dd>admin@naver.com</dd><span class="bar"></span>
+            <dt>대표자</dt><dd>서중교</dd>
         </dl>
     </div>
 </div>
