--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -123,6 +123,15 @@
                         height: 100%;
                         background: transparent no-repeat center center/cover;
                     }
+                    & .bg {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        background-color: #333;
+                        opacity: .4;
+                    }
                     & .typo {
                         position: absolute;
                         left: 30px;
@@ -131,13 +140,14 @@
                         width: 80%;
                         & h2 {
                             margin: 0 0 7px 0;
-                            font-weight: 300;
                             font-size: 27px;
+                            font-weight: normal;
                         }
                         & p {
                             margin: 7px 0 0 0;
                             font-size: 17px;
-                            opacity: .7;
+                            font-weight: 200;
+                            opacity: .9;
                         }
                     }
                 }
