--- a/src/app/media/box.component.html
+++ b/src/app/media/box.component.html
@@ -8,7 +8,7 @@
         <div class="typo">
             <h2>{{args.title}}</h2>
             <p>{{args.desc}}</p>
-            <p>{{args.date}}</p>
+            <p class="date">{{args.date}}</p>
         </div>
     </div>
 </ng-template>
@@ -32,7 +32,7 @@
             <div class="typo">
                 <h2>{{args.title}}</h2>
                 <p>{{args.desc}}</p>
-                <p>{{args.date}}</p>
+                <p class="date">{{args.date}}</p>
             </div>
         </div>
     </div>
