--- a/src/app/media/media.component.html
+++ b/src/app/media/media.component.html
@@ -8,7 +8,7 @@
             <div class="picinfo">
                 <h2>{{boxes[0].title}}</h2>
                 <p>{{boxes[0].desc}}</p>
-                <p>{{boxes[0].date}}</p>
+                <p class="date">{{boxes[0].date}}</p>
             </div>
         </div>
         <!-- <div class="right-side {{mainPicType}}">
