--- a/src/app/scrap/scrap.component.html
+++ b/src/app/scrap/scrap.component.html
@@ -1,5 +1,5 @@
 <div class="boundary expend">
-    <h2 class="title">Scrap</h2>
+    <h2 class="title">관련글</h2>
     <div class="scrap-box">
         <div *ngFor="let scrap of scraps" class="article">
             <a class="click-area" href="{{scrap.link}}" target="_blank">
