--- a/src/styles/_intro.scss
+++ b/src/styles/_intro.scss
@@ -17,6 +17,7 @@
     }
     & .typo {
         position: absolute;
+        max-width: 555px;
         width: 100%;
         height: 100%;
         top: 0;
@@ -25,62 +26,66 @@
     & .sparassis-crispa {
         height: 700px;
         & .typo {
-            padding: 140px 50px 0 350px;
+            margin-top: 150px;
+            padding: 0 50px;
             @media screen and (max-width: 980px) {
-                padding-left: 50px;
+                margin-left: 0px;
             }
             @media screen and (min-width: 981px) and (max-width: 1280px) {
-                padding-left: 90px;
+                margin-left: 90px;
             }
 
             @media screen and (min-width: 1281px) and (max-width: 1440px) {
-                padding-left: 140px;
+                margin-left: 140px;
             }
 
             @media screen and (min-width: 1441px) and (max-width: 1920px) {
-                padding-left: 280px;
+                margin-left: 280px;
             }
 
             @media screen and (min-width: 1921px) {
-                padding-left: 360px;
+                margin-left: 420px;
             }
             & h2 {
+                font-size: 32px;
+                line-height: 43px;
                 text-align: left;
             }
             & p {
                 max-width: 650px;
                 text-align: justify;
+                margin-top: 25px;
+                font-size: 18px;
+                line-height: 28px;
             }
             & .source-link {
                 display: block;
-                margin-top: 40px;
+                margin-top: 50px;
                 @media screen and (max-width: 500px) {
                     display: none;
                 }
                 & .thumb {
                     display: block;
                     float: left;
-                    width: 110px;
-                    height: 155px;
-                    background: url("/assets/images/thumb_book_beta13.jpg") no-repeat center center/cover;
+                    width: 168px;
+                    height: 94px;
+                    background: url("./assets/images/thumb_mybody.jpg") no-repeat center center/cover;
                     // background: #999;
                 }
                 & dl {
                     display: block;
                     float: left;
-                    margin: 5px 0 0 18px;
+                    margin: 0 0 0 15px;
                     & dt {
                         color: #000;
                     }
                     & dd {
-                        margin-top: 8px;
+                        margin-top: 5px;
                         font-size: 14px;
                         &.link-btn {
-                            margin-top: 23px;
-                            border: 1px solid #00afff;
-                            padding: 8px 16px 9px 16px;
+                            margin-top: 20px;
+                            padding: 0;
                             width: 105px;
-                            border-radius: 2px;
                             color: #00afff;
                         }
                     }
