--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,13 +1,13 @@
 <div id="sparassis-crispa" class="boundary sparassis-crispa">
     <div class="bg"></div>
     <div class="typo">
-        <h2 class="title">Welcome to my application</h2>
-        <p>Build features quickly with simple, declarative templates. Extend the template language with your own components and use a wide array of existing components. Get immediate Angular-specific help and feedback with nearly every IDE and editor. All this comes together so you can focus on building amazing apps rather than trying to make the code work.</p>
-        <a class="source-link" href="http://book.naver.com/bookdb/book_detail.nhn?bid=7443914" target="_blank">
+        <h2>탁월한 항암 효능, 꽃송이버섯</h2>
+        <p>꽃송이버섯은 가장 많은 베타글루칸이 함유된 천연물입니다. 베타글루칸은 잘 알려진 항암 물질이며 혈당과 혈중 콜레스테롤 감소에도 효과가 있습니다. 꽃송이버섯의 베타글루칸 함유량은 잎새버섯이나 아가리쿠스 보다 3~5배 많아 버섯 중에서도 으뜸이라 할 수 있습니다.</p>
+        <a class="source-link" href="https://youtu.be/wUVvBqsMN1A" target="_blank">
             <span class="thumb"></span>
             <dl>
-                <dt>꽃송이버섯 베타글루칸 1.3</dt>
-                <dd>나카지마 미쯔오 도쿄의대 교수</dd>
+                <dt>명품! 꽃송이버섯의 효능</dt>
+                <dd>TV조선 내 몸 사용설명서 110회</dd>
                 <dd class="link-btn">자세히 보기</dd>
             </dl>
         </a>
