--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @import url("http://fonts.googleapis.com/earlyaccess/notosanskr.css");
+@import url("http://fonts.googleapis.com/earlyaccess/nanummyeongjo.css");
 
 $pageWidth: 1080px;
 $widePicWidth: 890px;
@@ -38,10 +39,18 @@ dl, dt, dd {
     margin:0;
     padding:0;
 }
-p, h2, h3, h4 {
-    font-weight: normal;
+p {
     margin: 0;
     padding: 0;
+}
+h2, h3, h4 {
+    font-weight: 400;
+    margin: 0;
+    padding: 0;
+    color: $titleColor;
+}
+h2 {
+    font-family: 'Nanum Myeongjo', 'Noto Sans KR', sans-serif;
 }
 a {
     text-decoration: none;
@@ -68,7 +77,7 @@ a {
             margin: 0 auto;
             max-width: $pageWidth;
         }
-        & h2 {
+        & h2.title {
             margin-bottom: 55px;
         }
     }
