--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -54,11 +54,23 @@
                     text-align: left;
                     & h2 {
                         margin-bottom: 0;
-                        font-size: 24px;
+                        font-size: 27px;
+                        font-weight: 400;
+                        line-height: 36px;
+                        color: $titleColor;
                     }
                     & p {
-                        margin: 15px 0 0 0;
-                        font-size: 13px;
+                        margin: 8px 0 0 0;
+                        font-size: 17px;
+                        font-weight: 300;
+                        line-height: 25px;
+                    }
+                    & .date {
+                        font-size: 15px;
+                        border-top: 1px solid #c1c1c1;
+                        display: inline-block;
+                        padding-top: 3px;
+                        margin-top: 16px;
                     }
                 }
             }
@@ -130,43 +142,71 @@
                         width: 100%;
                         height: 100%;
                         background-color: #333;
-                        opacity: .4;
+                        opacity: .35;
                     }
                     & .typo {
                         position: absolute;
                         left: 30px;
-                        bottom: 35px;
+                        bottom: 65px;
                         color: #fff;
-                        width: 80%;
+                        width: 100%;
+                        padding: 25px;
                         & h2 {
-                            margin: 0 0 7px 0;
+                            margin: 0;
                             font-size: 27px;
-                            font-weight: normal;
+                            font-weight: 400;
+                            line-height: 36px;
+                            color: #fff;
                         }
                         & p {
-                            margin: 7px 0 0 0;
+                            margin: 8px 0 0 0;
                             font-size: 17px;
-                            font-weight: 200;
-                            opacity: .9;
+                            font-weight: 300;
+                            line-height: 25px;
+                            opacity: .8;
+                        }
+                        & .date {
+                            font-size: 15px;
+                            border-top: 1px solid #c1c1c1;
+                            display: inline-block;
+                            padding-top: 3px;
+                            margin-top: 16px;
                         }
                     }
                 }
                 &.type-a {
                     width: $widePicWidth;
                     & .typo {
-                        max-width: 340px;
+                        max-width: 445px;
+                        @media screen and (max-width: 500px) {
+                            max-width: 100%;
+                            left: 0;
+                            padding: 65px;
+                            text-align: center;
+                        }
                     }
                 }
                 &.type-b {
                     width: $halfPicWidth;
                     & .typo {
-                        max-width: 270px;
+                        left: 0;
+                        padding: 65px;
+                        text-align: center;
                     }
                 }
                 &.type-c {
                     width: $halfPicWidth;
                     & .typo {
-                        max-width: 270px;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
+                        padding: 65px;
+                        top: 0;
+                        bottom: 0;
+                        left: 0;
+                        text-align: center;
+                        vertical-align: middle;
                     }
                     & .part {
                         position: relative;
