--- a/src/styles/_intro.scss
+++ b/src/styles/_intro.scss
@@ -69,7 +69,7 @@
                     float: left;
                     width: 168px;
                     height: 94px;
-                    background: url("./assets/images/thumb_mybody.jpg") no-repeat center center/cover;
+                    background: url("/assets/images/thumb_mybody.jpg") no-repeat center center/cover;
                     // background: #999;
                 }
                 & dl {
