--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,5 +1,8 @@
 <div class="boundary">
-    <h2 class="title">상품주문</h2>
+    <div class="title">
+        <h2>상품주문</h2>
+        <p>정성으로 재배한 최상품을 만나보세요</p>
+    </div>
     <div class="product-box">
         <div *ngFor="let product of products; let i = index" class="product" [class.soldout]="product.soldout">
             <div class="top" (click)="add($event, i)" (mouseover)="activeCover(i, '장바구니 담기')" (mouseout)="inactiveCover(i)">
