--- a/src/app/scrap/scrap.component.html
+++ b/src/app/scrap/scrap.component.html
@@ -1,5 +1,8 @@
 <div class="boundary expend">
-    <h2 class="title">관련글</h2>
+    <div class="title">
+        <h2>관련글</h2>
+        <p>꽃송이버섯 자세히 알기</p>
+    </div>
     <div class="scrap-box">
         <div *ngFor="let scrap of scraps" class="article">
             <a class="click-area" href="{{scrap.link}}" target="_blank">
