--- a/src/styles/_intro.scss
+++ b/src/styles/_intro.scss
@@ -56,7 +56,7 @@
                 text-align: justify;
                 margin-top: 25px;
                 font-size: 18px;
-                line-height: 28px;
+                line-height: 1.5;
             }
             & .source-link {
                 display: block;
