--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -68,17 +68,27 @@ a {
         margin-top: 0;
     }
     & .title {
-        text-align: center;
+        
     }
     & section {
-        padding: 50px 0 75px 0;
+        padding: 90px 0 100px 0;
         & .boundary {
             position: relative;
             margin: 0 auto;
             max-width: $pageWidth;
         }
-        & h2.title {
+        & .title {
             margin-bottom: 55px;
+            text-align: center;
+            & h2 {
+                font-size: 32px;
+                line-height: 43px;
+            }
+            & p {
+                margin-top: 8px;
+                font-size: 17px;
+            }
+            
         }
     }
 }
