--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -52,25 +52,24 @@
                     max-width: 270px;
                     margin: 0 auto;
                     text-align: left;
+                    word-break: keep-all;
                     & h2 {
                         margin-bottom: 0;
-                        font-size: 27px;
+                        font-size: 32px;
                         font-weight: 400;
-                        line-height: 36px;
+                        line-height: 38px;
                         color: $titleColor;
                     }
                     & p {
-                        margin: 8px 0 0 0;
+                        margin: 12px 0 0 0;
                         font-size: 17px;
                         font-weight: 300;
-                        line-height: 25px;
+                        line-height: 1.3;
                     }
                     & .date {
                         font-size: 15px;
-                        border-top: 1px solid #c1c1c1;
                         display: inline-block;
-                        padding-top: 3px;
-                        margin-top: 16px;
+                        margin-top: 12px;
                     }
                 }
             }
@@ -141,16 +140,17 @@
                         left: 0;
                         width: 100%;
                         height: 100%;
-                        background-color: #333;
-                        opacity: .35;
+                        background-color: #000;
+                        opacity: .3;
                     }
                     & .typo {
                         position: absolute;
-                        left: 30px;
-                        bottom: 65px;
+                        left: 0;
+                        bottom: 0;
                         color: #fff;
                         width: 100%;
-                        padding: 25px;
+                        padding: 55px 45px;
+                        word-break: keep-all;
                         & h2 {
                             margin: 0;
                             font-size: 27px;
@@ -162,51 +162,36 @@
                             margin: 8px 0 0 0;
                             font-size: 17px;
                             font-weight: 300;
-                            line-height: 25px;
+                            line-height: 1.3;
                             opacity: .8;
                         }
                         & .date {
                             font-size: 15px;
-                            border-top: 1px solid #c1c1c1;
                             display: inline-block;
-                            padding-top: 3px;
-                            margin-top: 16px;
+                            margin-top: 8px;
                         }
                     }
                 }
                 &.type-a {
                     width: $widePicWidth;
                     & .typo {
-                        max-width: 445px;
+                        max-width: 480px;
+                        left: 0;
                         @media screen and (max-width: 500px) {
                             max-width: 100%;
-                            left: 0;
-                            padding: 65px;
-                            text-align: center;
                         }
                     }
                 }
                 &.type-b {
                     width: $halfPicWidth;
-                    & .typo {
-                        left: 0;
-                        padding: 65px;
-                        text-align: center;
-                    }
                 }
                 &.type-c {
                     width: $halfPicWidth;
                     & .typo {
-                        display: flex;
-                        flex-direction: column;
-                        justify-content: center;
-                        align-items: center;
-                        padding: 65px;
-                        top: 0;
-                        bottom: 0;
-                        left: 0;
-                        text-align: center;
-                        vertical-align: middle;
+                        // display: flex;
+                        // flex-direction: column;
+                        // justify-content: center;
+                        // align-items: center;
                     }
                     & .part {
                         position: relative;
