--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,7 +1,7 @@
 <div class="boundary">
     <div class="title">
         <h2>상품주문</h2>
-        <p>정성으로 재배한 최상품을 만나보세요</p>
+        <p>생산자가 직접 판매해 유통마진 없는 착한 가격</p>
     </div>
     <div class="product-box">
         <div *ngFor="let product of products; let i = index" class="product" [class.soldout]="product.soldout">
